<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:layout_margin="20dp"
		tools:context=".MainActivity">

	<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/app_title"
			android:gravity="center"
			android:layout_margin="15dp"
			android:textSize="32sp"
			android:textStyle="bold"
	/>

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:layout_margin="15dp"
			android:gravity="center"
	>
		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="4dp"
				android:text="@string/task_counter_label"
				android:textSize="20sp"
		/>

		<TextView
				android:id="@+id/open_task_amount"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="4dp"
				android:text="@string/default_value"
				android:textSize="20sp"
		/>
	</LinearLayout>

	<LinearLayout
			android:id="@+id/new_task"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:background="@drawable/border"
			android:gravity="center"
			android:padding="5dp"
			android:layout_margin="15dp"
	>
		<EditText
				android:id="@+id/new_task_content"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:autofillHints="false"
				android:hint="@string/new_task_hint"
				android:padding="4dp"
				android:background="@null"
		/>

		<android.widget.Button
				android:id="@+id/open_task_btn"
				android:layout_width="50dp"
				android:layout_height="50dp"
				android:text="@string/task_open_label"
				android:textColor="@color/white"
				android:textSize="20sp"
				android:textStyle="bold"
				android:layout_margin="4dp"
				android:background="@drawable/task_new_button"
		/>
	</LinearLayout>

	<ScrollView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
	>
		<LinearLayout
				android:id="@+id/task_container"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
		/>
	</ScrollView>


</LinearLayout>